2009-08-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tools/SOGoToolRestore.m: new "sogo-tool" utility that restores
	the specified user data previously created by the "backup"
	command.

	* Tools/SOGoToolBackup.m (-extractUserPreferences:intoRecord:): we
	must extract the values of the user defaults in order to put them
	in the record dictionary. Putting the defaults themselves will
	only produce serialized strings.

2009-08-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m: the objectClass are now all added
	to the return user records.

	* Tools/NSDictionary+SOGoTool.m (-userRecordAsLDIFEntry): new
	method that converts a user record as returned by LDAPSource to a
	compliant LDIF entry.

	* Tools/NSDictionary+SOGoTool.[hm]: new category module.

	* Tools/SOGoToolBackup.m: new "sogo-tool" utility that backs up
	user data following the file-format specified in README.backup

	* Tools/SOGoToolRemoveDoubles.m: new "sogo-tool" utility method
	implementing the old "sogo-contacts-removedoubles" utility.

	* Tools/SOGoToolCheckDoubles.m: new "sogo-tool" utility method
	implementing the old "sogo-contacts-checkdoubles" utility.

	* Tools/SOGoTool.m: new class module implementing the base class
	for all management modules for "sogo-tool".

	* Tools/sogo-tool.m: new command-line tool that offers a generic
	utility for SOGo administration.

2009-08-12  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MainUI/Version (SUBMINOR_VERSION): 1.0.4 release.

2009-08-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m
	(-takeValuesFromRequest:inContext:): same as below, for the organizer.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	(-changeParticipationStatus:forRecurrenceId): when setting the
	"SENT-BY" attribute value, we need to use "setValue:0.." instead
	"addValue:" to avoid invalid accumulation of values.

2009-08-11  Francis Lachapelle  <flachapelle@inverse.ca>
