@@ -4,7 +4,7 @@ ADDITIONAL_CPPFLAGS += \
         -DSOGO_MAJOR_VERSION=$(MAJOR_VERSION) \
         -DSOGO_MINOR_VERSION=$(MINOR_VERSION) \
         -DSOGO_SUBMINOR_VERSION=$(SUBMINOR_VERSION) \
-	-DSOGO_LIBDIR="\"$(SOGO_LIBDIR)\""
+	-DSOGO_LIBDIR="@\"$(SOGO_LIBDIR)\""
 
 ADDITIONAL_INCLUDE_DIRS += \
 	-D_GNU_SOURCE -I../SOPE/ -I../SoObjects/
